[workspace]
resolver = "2"
# Reminder: when adding a crate here, don't forget to update
# the list of subdirs in Makefile, and the list of smithy files in codegen.toml
members = [
    "blobstore/rust",
    "httpserver/rust",
    "httpclient/rust",
    "keyvalue/rust",
    "logging/rust",
    "messaging/rust",
    "numbergen/rust",
    "sqldb/rust",
    "lattice-control/rust",
    "testing/rust",
    # examples
    "factorial/rust",
    "ml/rust",
]

exclude = [
    "tests/actor/builtins",
    "tests/encoding",
]
