[package]
name = "wasmcloud-interface-factorial"
version = "0.5.0-alpha.1.0" # was 0.4.1
description = "Interface library for the wasmcloud factorial capability, wasmcloud:example:factorial"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/interfaces"
authors = [ "wasmCloud team" ]
edition = "2021"
license = "Apache-2.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "d9c4dd571925c66462c196134a66f799a2e4c7fc" }

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "38eb105b135d615ab0910a05a9e7d5e821e85176" }

