[package]
name = "wasmcloud-interface-factorial"
version = "0.5.1"
description = "Interface library for the wasmcloud factorial capability, wasmcloud:example:factorial"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/interfaces"
authors = [ "wasmCloud team" ]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wasmbus-rpc = "0.10.0"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.5.0"

