[package]
name = "wasmcloud-interface-httpclient"
version = "0.1.3"
description = "interface for actors to issue http/https requests (wasmcloud:httpclient)"
repository = "https://github.com/wasmcloud/interfaces"
homepage = "https://github.com/wasmcloud/wasmcloud"
keywords = ["wasmcloud","wasm","actor","webassembly","capability"]
categories = [ "api-bindings","network-programming","wasm" ]
authors = [ "wasmcloud Team" ]
edition = "2018"
license = "Apache-2.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

[dependencies.wasmbus-rpc]
version = "0.3"
#path = "../../../weld/rpc-rs"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies.weld-codegen]
version = "0.1"
#path = "../../../weld/codegen"

