[package]
name = "wasmcloud-interface-httpserver"
version = "0.7.0"
description = "interface for actors to receive http requests (wasmcloud:httpserver)"
repository = "https://github.com/wasmcloud/interfaces"
homepage = "https://github.com/wasmcloud/wasmcloud"
keywords = ["wasmcloud","wasm","actor","webassembly","capability"]
categories = [ "api-bindings","network-programming","wasm" ]
authors = [ "wasmcloud Team" ]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
exclude = [ "build.rs" ]

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85" }

[dev-dependencies]
base64 = "0.13"

# dependencies for build.rs
[build-dependencies]
weld-codegen = "0.5.0"
