[package]
name = "wasmcloud-interface-keyvalue"
version = "0.7.0-alpha-1.0" # was 0.6.0
description = "Key-Value store (wasmcloud:keyvalue)"
repository = "https://github.com/wasmcloud/interfaces"
homepage = "https://github.com/wasmcloud/wasmcloud"
keywords = ["wasmcloud","key-value","redis","capability"]
categories = [ "api-bindings","database","wasm" ]
authors = [ "wasmcloud Team" ]
edition = "2021"
license = "Apache-2.0"
exclude = [ "build.rs" ]

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
log = "0.4"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "89de35130b2379e144a5d7867a9b7bd9590d6b1f" }

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "38eb105b135d615ab0910a05a9e7d5e821e85176" }
