[package]
name = "wasmcloud-interface-lattice-control"
version = "0.12.0-alpha-1.0" # was 0.11.0
edition = "2021"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmCloud/interfaces"
description = "This library allows different types of consumers to interact with the lattice control interface."
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-interface-lattice-control"
readme = "../README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "control", "ctl"]
categories = ["wasm", "api-bindings"]
# don't include build.rs on crates.io build
exclude = ["build.rs"]


[dependencies]
async-trait = "0.1"
data-encoding = "2.3.1"
futures = "0.3"
log = "0.4.14"
rmp-serde = "1.1.0"
serde = { version = "1.0.118", features = ["derive"] }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "d9c4dd571925c66462c196134a66f799a2e4c7fc" }

[build-dependencies]
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "38eb105b135d615ab0910a05a9e7d5e821e85176" }
