[package]
name = "wasmcloud-interface-lattice-control"
version = "0.15.0"
edition = "2021"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmCloud/interfaces"
description = "This library contains types and service definitions used by actors and providers to support the wasmcloud:latticecontrol contract"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-interface-lattice-control"
readme = "../README.md"
keywords = ["webassembly", "wasm", "wasmcloud", "control", "ctl"]
categories = ["wasm", "api-bindings"]
# don't include build.rs on crates.io build
exclude = ["build.rs"]


[dependencies]
async-trait = "0.1"
data-encoding = "2.3.1"
futures = "0.3"
log = "0.4.14"
rmp-serde = "1.1.0"
serde = { version = "1.0.118", features = ["derive"] }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85" }

[build-dependencies]
weld-codegen = "0.5.0"
