[package]
name = "wasmcloud-interface-messaging"
version = "0.5.0"
description = "Interface library for the wasmCloud messaging capability, wasmcloud:messaging"
repository = "https://github.com/wasmcloud/interfaces"
homepage = "https://github.com/wasmcloud/wasmcloud"
keywords = ["wasmcloud","capability","interface"]
categories = [ "api-bindings","wasm" ]
authors = [ "wasmcloud Team" ]
edition = "2021"
license = "Apache-2.0"
exclude = [ "build.rs" ]

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
log = "0.4"
wasmbus-rpc = "0.8.5"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.4.3"
