[package]
name = "wasmcloud_interface_mlinference"
version = "0.5.0"
description = "Interface library for the MlInference capability"
authors = [ "wasmCloud Team" ]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
wasmbus-rpc = "0.14"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.7"
