[package]
name = "wasmcloud-interface-sqldb"
version = "0.5.1"
description = "Interface for wasmCloud actors to connect to a relational database using the capability 'wasmcloud:sqldb'"
repository = "https://github.com/wasmcloud/interfaces"
homepage = "https://github.com/wasmcloud/wasmcloud"
keywords = ["wasmcloud","wasm","database","webassembly","capability"]
categories = [ "api-bindings","database","wasm" ]
authors = [ "wasmcloud Team" ]
edition = "2021"
license = "Apache-2.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "7a6522e5333e72a423d3aaac89f5060514d0d333" }
minicbor = { version = "0.17", features = ["derive", "std", "half"] }

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = { git = "https://github.com/wasmcloud/weld", rev = "7a6522e5333e72a423d3aaac89f5060514d0d333" }

