[package]
name = "wasmcloud-interface-sqldb"
version = "0.7.1"
description = "Interface for wasmCloud actors to connect to a relational database using the capability wasmcloud:sqldb"
repository = "https://github.com/wasmcloud/interfaces"
homepage = "https://github.com/wasmcloud/wasmcloud"
keywords = ["wasmcloud","wasm","database","webassembly","capability"]
categories = [ "api-bindings","database","wasm" ]
authors = [ "wasmcloud Team" ]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = [ "build.rs" ]

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
minicbor = { version = "0.17", features = ["derive", "std", "half"] }
wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev="77f50ddd476e0b2a50915de6c4fb0f41e6e24c85" }

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.5.0"
