[package]
name = "builtins-test-actor"
version = "0.1.3"
authors = [ "wasmcloud Team" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}
regex = "1"

wasmbus-rpc = { git = "https://github.com/wasmcloud/weld", rev = "7a6522e5333e72a423d3aaac89f5060514d0d333" }
wasmcloud-interface-numbergen = { path = "../../numbergen/rust" }
wasmcloud-interface-logging = { path = "../../logging/rust" }
wasmcloud-test-util = { path = "../../../wasmcloud-test/wasmcloud-test-util" }

# comment out the following if this is inside a cargo workspace
#[profile.release]
## Optimize for small code size
#lto = true
#opt-level = "s"
